Changelog
===========

0.3 - (2013-01-08)
---------------------

- Fix arbiter parsing: previously some organizers were
  parsed like arbiters. Fixes #1 [erral]

0.2 - (2013-01-06)
-------------------

- Added a CSV file merging utlity [erral]

- Improve documentation [erral]

0.1 - (2013-01-06)
-------------------

- Initial release [erral]